save progress - wip

--- a/inetpub/wwwroot/ServicesMvc/ServicesMvc.csproj
+++ b/inetpub/wwwroot/ServicesMvc/ServicesMvc.csproj
@@ -3179,6 +3179,7 @@
     <Content Include="Views\Leasing\AbweichWiedereingang.cshtml" />
     <Content Include="Views\Leasing\AbweichWiedereingang\Grid.cshtml" />
     <Content Include="Views\Leasing\AbweichWiedereingang\Suche.cshtml" />
+    <Content Include="Views\Fahrer\Partial\Auftraege\FreierAuftragDetailsCommand.cshtml" />
     <None Include="Web.config">
       <SubType>Designer</SubType>
     </None>
