--- a/Work/CkgDomainLogic/CkgDomainCoc/CkgDomainCoc.csproj
+++ b/Work/CkgDomainLogic/CkgDomainCoc/CkgDomainCoc.csproj
@@ -92,6 +92,7 @@
     <Compile Include="CoC\Models\CocBeauftragungMode.cs" />
     <Compile Include="CoC\Models\DruckOptionen.cs" />
     <Compile Include="CoC\Models\FreieZulassung.cs" />
+    <Compile Include="CoC\Models\Sendungen\SendungsAuftragPlaceSelektor.cs" />
     <Compile Include="CoC\Models\Sendungen\SendungsAuftragDocsSelektor.cs" />
     <Compile Include="CoC\Models\Sendungen\SendungsAuftragFinSelektor.cs" />
     <Compile Include="CoC\Models\Sendungen\SendungsAuftragIdSelektor.cs" />
