--- a/inetpub/wwwroot/ServicesMvc/ServicesMvc.csproj
+++ b/inetpub/wwwroot/ServicesMvc/ServicesMvc.csproj
@@ -474,6 +474,7 @@
     <Content Include="Areas\Autohaus\Views\Zulassung\Partial\VersanddatenForm.cshtml" />
     <Content Include="Areas\Autohaus\Views\Zulassung\Partial\VersandDienstleisterForm.cshtml" />
     <Content Include="Documents\Templates\KfzKennzeichengroessen.pdf" />
+    <Content Include="Areas\Autohaus\Views\Zulassung\SzHome.cshtml" />
     <None Include="Teamviewer-Support.zip">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
