Neue Task-Konfiguration für WKDA_AT

--- a/Work/ServerAnwendungen/EasyExportGeneralTask/EasyExportGeneralTask/App.config
+++ b/Work/ServerAnwendungen/EasyExportGeneralTask/EasyExportGeneralTask/App.config
@@ -63,6 +63,7 @@
         <add key="ZIPPath" value="C:\Programme\EasyExportGeneralTask\7ZA.EXE"/>
         <add key="ConfigFilePath" value="Config.xml"/>
         <add key="WkdaDokumentAblagePfad" value="\\192.168.10.96\prod\portal\wkda\01_pdf"/>
+        <add key="WkdaAtDokumentAblagePfad" value="\\192.168.10.96\prod\dad\kls\10080071"/>
 
         <!--TEST-Flags-->
         <add key="PauseAfterCompletion" value="true"/>
