--- a/inetpub/wwwroot/ServicesMvc/ServicesMvc.csproj
+++ b/inetpub/wwwroot/ServicesMvc/ServicesMvc.csproj
@@ -495,6 +495,7 @@
     <Content Include="Areas\Autohaus\Views\Zulassung\Partial\ErsatzkennzeichenForm.cshtml" />
     <Content Include="Areas\Autohaus\Views\Zulassung\Partial\Haendlerkennzeichen.cshtml" />
     <Content Include="Areas\Autohaus\Views\Zulassung\Partial\HaendlerkennzeichenForm.cshtml" />
+    <Content Include="Areas\Autohaus\Views\Zulassung\Partial\Umkennzeichnung.cshtml" />
     <None Include="Teamviewer-Support.zip">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
