--- a/Work/CkgDomainLogic/CkgDomainRemarketing/CkgDomainRemarketing.csproj
+++ b/Work/CkgDomainLogic/CkgDomainRemarketing/CkgDomainRemarketing.csproj
@@ -59,16 +59,27 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\Belastungsanzeigen\RemarketingController.cs" />
     <Compile Include="Controllers\FehlendeDaten\RemarketingController.cs" />
     <Compile Include="Controllers\RemarketingController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Remarketing\Contracts\IFehlendeDatenDataService.cs" />
+    <Compile Include="Remarketing\Contracts\IBelastungsanzeigenDataService.cs" />
     <Compile Include="Remarketing\Models\AppModelMappings.cs" />
     <Compile Include="Remarketing\Models\DataModels\FehlendeDaten.cs" />
+    <Compile Include="Remarketing\Models\DataModels\Belastungsanzeige.cs" />
+    <Compile Include="Remarketing\Models\DataModels\Gutachten.cs" />
+    <Compile Include="Remarketing\Models\DataModels\Hereinnahmecenter.cs" />
     <Compile Include="Remarketing\Models\DataModels\Vermieter.cs" />
     <Compile Include="Remarketing\Models\UIModels\FehlendeDatenSelektor.cs" />
+    <Compile Include="Remarketing\Models\UIModels\BelastungsanzeigenSelektor.cs" />
+    <Compile Include="Remarketing\Models\UIModels\InfoAnzeigeModel.cs" />
+    <Compile Include="Remarketing\Models\UIModels\SetBlockadeModel.cs" />
+    <Compile Include="Remarketing\Models\UIModels\SetReklamationModel.cs" />
     <Compile Include="Remarketing\Services\FehlendeDatenDataServiceSAP.cs" />
+    <Compile Include="Remarketing\Services\BelastungsanzeigenDataServiceSAP.cs" />
     <Compile Include="Remarketing\ViewModels\FehlendeDatenViewModel.cs" />
+    <Compile Include="Remarketing\ViewModels\BelastungsanzeigenViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\SapORM\models\SapORM.Models.csproj">
@@ -90,6 +101,10 @@
     <ProjectReference Include="..\..\Tools\WebTools\WebTools.csproj">
       <Project>{540F0A45-F018-4489-8153-4504CA663CFE}</Project>
       <Name>WebTools</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\CkgDomainArchive\CkgDomainArchive.csproj">
+      <Project>{F1C484BE-4B1D-465D-8761-E29DA430A53A}</Project>
+      <Name>CkgDomainArchive</Name>
     </ProjectReference>
     <ProjectReference Include="..\Lib\CkgDomainLogic.csproj">
       <Project>{D8B336B9-0D12-4AA8-B6D2-536425C228E9}</Project>
