ITA 8873: Neue Anwendung "Belastungsanzeigen"

--- a/inetpub/wwwroot/Services/Web.config
+++ b/inetpub/wwwroot/Services/Web.config
@@ -68,7 +68,7 @@
       <add key="EasyRemotePort" value="2001" />
       <add key="EasyRequestTimeout" value="60" />
       <add key="EasySessionId" value="_" />
-      <add key="EasyBlobPathLocal" value="F:\Inetpub\wwwroot\Portal\Temp\Pictures" />
+      <add key="EasyBlobPathLocal" value="C:\dev\Inetpub\wwwroot\Portal\Temp\Pictures" />
       <add key="EasyBlobPathWebserver" value="\Portal\Temp\Pictures\" />
       <add key="EasyBlobPathRemote" value="C:\TEMP" />
       <add key="EasyLogPath" value="C:\TEMP" />
