--- a/Work/CkgDomainLogic/CkgDomainAutohaus/CkgDomainAutohaus.csproj
+++ b/Work/CkgDomainLogic/CkgDomainAutohaus/CkgDomainAutohaus.csproj
@@ -149,6 +149,8 @@
     <Compile Include="General\Models\UiModel.cs" />
     <Compile Include="Zulassung\Models\BankAdressdaten.cs" />
     <Compile Include="Zulassung\Models\Fahrzeugdaten.cs" />
+    <Compile Include="Zulassung\Models\Haendlerkennzeichendaten.cs" />
+    <Compile Include="Zulassung\Models\Ersatzkennzeichendaten.cs" />
     <Compile Include="Zulassung\Models\Versanddaten.cs" />
     <Compile Include="Zulassung\Models\StatusverfolgungTrackingInfo.cs" />
     <Compile Include="Zulassung\Models\PdfFormular.cs" />
