--- a/inetpub/wwwroot/ServicesMvc/ServicesMvc.csproj
+++ b/inetpub/wwwroot/ServicesMvc/ServicesMvc.csproj
@@ -3205,6 +3205,12 @@
     <Content Include="Views\Remarketing\Belastungsanzeigen\Partial\InfoForm.cshtml" />
     <Content Include="Views\Remarketing\Belastungsanzeigen\Partial\SetReklamationForm.cshtml" />
     <Content Include="Views\Remarketing\Belastungsanzeigen\Partial\SetBlockForm.cshtml" />
+    <Content Include="Views\Remarketing\GemeldeteVorschaeden.cshtml" />
+    <Content Include="Views\Remarketing\GemeldeteVorschaeden\Grid.cshtml" />
+    <Content Include="Views\Remarketing\GemeldeteVorschaeden\Partial\InfoForm.cshtml" />
+    <Content Include="Views\Remarketing\GemeldeteVorschaeden\Partial\SetBlockForm.cshtml" />
+    <Content Include="Views\Remarketing\GemeldeteVorschaeden\Partial\EditVorschadenForm.cshtml" />
+    <Content Include="Views\Remarketing\GemeldeteVorschaeden\Suche.cshtml" />
     <None Include="Web.config">
       <SubType>Designer</SubType>
     </None>
