--- a/dev/Test/WatchlistViewer/WatchlistViewer/WatchlistViewer.csproj
+++ b/dev/Test/WatchlistViewer/WatchlistViewer/WatchlistViewer.csproj
@@ -163,6 +163,10 @@
   <ItemGroup>
     <Resource Include="Images\16x16\comdirect.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\16x16\proxy-off.png" />
+    <Resource Include="Images\16x16\proxy-on.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
