CkgNetworkSwitch, first draft

--- a/.gitignore
+++ b/.gitignore
@@ -191,3 +191,4 @@ dev/work/GAC/GeneralTools.dll
 dev/work/GAC/de-DE/GeneralTools.resources.dll
 dev/StockCapture/StockCaptureWeb/packages/
 dev/ToDoJenzen/packages/
+dev/Test/CkgNetworkSwitch/packages/
