--- a/dev/work/Tools/WpfTools4/WpfTools4.csproj
+++ b/dev/work/Tools/WpfTools4/WpfTools4.csproj
@@ -98,6 +98,8 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Resource Include="Images\12x12\delete_black.png" />
+    <Resource Include="Images\12x12\toggle.png" />
     <Resource Include="Images\32x32\users_copy.png" />
   </ItemGroup>
   <ItemGroup>
