PdfPrint, printing pdf document with acrobat as backend

--- a/.gitignore
+++ b/.gitignore
@@ -192,3 +192,4 @@ dev/work/GAC/de-DE/GeneralTools.resources.dll
 dev/StockCapture/StockCaptureWeb/packages/
 dev/ToDoJenzen/packages/
 dev/Test/CkgNetworkSwitch/packages/
+dev/Test/PdfPrint/packages/
