--- a/dev/Test/PdfPrint/PdfPrint/PdfPrint.csproj
+++ b/dev/Test/PdfPrint/PdfPrint/PdfPrint.csproj
@@ -54,7 +54,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="itextsharp">
-      <HintPath>..\..\..\..\..\..\..\..\..\dev\Work\GAC\itextsharp.dll</HintPath>
+      <HintPath>..\..\..\work\GAC\itextsharp.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
