VsSolutionPersister, git library update

--- a/.gitignore
+++ b/.gitignore
@@ -193,3 +193,4 @@ dev/StockCapture/StockCaptureWeb/packages/
 dev/ToDoJenzen/packages/
 dev/Test/CkgNetworkSwitch/packages/
 dev/Test/PdfPrint/packages/
+dev/VsSolutionPersister/packages/
