Tdd, NUnit + NCrunch trial version

--- a/.gitignore
+++ b/.gitignore
@@ -194,3 +194,4 @@ dev/ToDoJenzen/packages/
 dev/Test/CkgNetworkSwitch/packages/
 dev/Test/PdfPrint/packages/
 dev/VsSolutionPersister/packages/
+dev/Test/TDD/Tdd/packages/
