--- a/.gitignore
+++ b/.gitignore
@@ -195,3 +195,4 @@ dev/Test/CkgNetworkSwitch/packages/
 dev/Test/PdfPrint/packages/
 dev/VsSolutionPersister/packages/
 dev/Test/TDD/Tdd/packages/
+dev/MaterialWpf/AhwToolbar/packages/
