TabControl, tab order changed event

--- a/dev/MaterialWpf/AhwToolbar/AhwToolbarLib/AhwToolbarLib.csproj
+++ b/dev/MaterialWpf/AhwToolbar/AhwToolbarLib/AhwToolbarLib.csproj
@@ -86,7 +86,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\work\Tools\GeneralTools\GeneralTools.csproj">
+      <Project>{a4f36243-8d89-460f-acb3-ef7df37d6fca}</Project>
+      <Name>GeneralTools</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
