AhwToolbar, TDD approaches

--- a/dev/MaterialWpf/AhwToolbar/AhwToolbarTests/AhwToolbarTests.csproj
+++ b/dev/MaterialWpf/AhwToolbar/AhwToolbarTests/AhwToolbarTests.csproj
@@ -96,6 +96,12 @@
     </None>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\AhwToolbar\AhwToolbarData.xml">
+      <Link>AhwToolbarData.xml</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
