VS 2017 Enterprise, live unit testing

--- a/.gitignore
+++ b/.gitignore
@@ -196,3 +196,4 @@ dev/Test/PdfPrint/packages/
 dev/VsSolutionPersister/packages/
 dev/Test/TDD/Tdd/packages/
 dev/MaterialWpf/AhwToolbar/packages/
+dev/MaterialWpf/AhwToolbar/.vs/
