--- a/dev/MaterialWpf/AhwToolbar/AhwToolbar/AhwToolbar.csproj
+++ b/dev/MaterialWpf/AhwToolbar/AhwToolbar/AhwToolbar.csproj
@@ -167,7 +167,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="AhwToolbarData.xml" />
+    <None Include="AhwToolbarData.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
