--- a/.gitignore
+++ b/.gitignore
@@ -197,3 +197,4 @@ dev/VsSolutionPersister/packages/
 dev/Test/TDD/Tdd/packages/
 dev/MaterialWpf/AhwToolbar/packages/
 dev/MaterialWpf/AhwToolbar/.vs/
+dev/MyBoss/.vs/
